--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 /*v1 is updated by litien*/
 
 body{
-	background-image:url(image/bg.jpg);
+	background-image:url(../image/bg.jpg);
 	font-family: 'Lato',Calibri,Arial,sans-serif;
 	margin:0;
 	}
@@ -84,7 +84,7 @@ h3{
     background-repeat: no-repeat;
 	position:absolute;
 	left:13.5em;
-	background-image:url(image/navigation-left-frame.png);
+	background-image:url(../image/navigation-left-frame.png);
 
 	}
 
@@ -414,22 +414,22 @@ a.task-link {
 	}
 .folder{
 	background-size:32px;
-	background-image:url(image/type_folder.png);
+	background-image:url(../image/type_folder.png);
 	}
 .txt{
 	background-size:32px;
-	background-image:url(image/type_doc.png);
+	background-image:url(../image/type_doc.png);
 	}
 .pic{
 	background-size:32px;
-	background-image:url(image/type_image.png);
+	background-image:url(../image/type_image.png);
 	}
 .url{
 	background-size:32px;
-	background-image:url(image/type_link.png);}
+	background-image:url(../image/type_link.png);}
 .unknown{
 	background-size:32px;
-	background-image:url(image/type_other.png);}
+	background-image:url(../image/type_other.png);}
 	
 span.task-name{
 	margin-left:8px;
